Example triggered by Jon's mail

--- a/presentations/2023-07-25-ietf117/slides.tex
+++ b/presentations/2023-07-25-ietf117/slides.tex
@@ -137,6 +137,7 @@ Client   Foe   Server
 	``\ldots are necessary even if the represention does not change over time but is a function of the request payload\ldots''
 
 	``\ldots ETags must be unique to the body even across request payloads \ldots''
+	(example: When request payload slices, a hash ETag needs to be fed the slice parameters.)
 
 	\bigskip
 
